# weckpi

./: .gitignore  README.md  pylintrc  requirements.txt  tidal.credentials.yaml
.github/workflows/: codeql.yml  pylint.yml  style.yml
docs/: parts.md  project_documentation.md  project_history.md
docs/notes/: logo.txt
playground/: tidal.py  tidal_credentials.yaml  tunein_cli.py
src/api/: pyproject.toml
src/api/src/weckpi/api/authentication/: __init__.py  authenication_response.py  authentication_details.py  authentication_result.py  code_authentication_response.py  link_authentication_response.py  oauth_session.py
src/api/src/weckpi/api/config/: __init__.py  alarm_config.py  config_structure.py  music_config.py  root_config.py
src/api/src/weckpi/api/music/: __init__.py  media_player.py  media_provider.py  media_resource.py  metadata.py  search_result.py
src/api/src/weckpi/api/plugin_manager/: __init__.py  plugin_manager.py  registration_details.py
src/api/src/weckpi/api/utilities/: __init__.py  class_helpers.py  collections.py
src/api/tests/: sampleConfig.json  test_config.py  test_plugin_manager.py  test_utilities.py
src/core/: .gitignore  pyproject.toml  test-config.json
src/core/resources/: config.json
src/core/src/weckpi/core/: main.py
src/coreplugin/: pyproject.toml
src/coreplugin/src/weckpi/coreplugin/music/media_players/: mpv.py
src/coreplugin/src/weckpi/coreplugin/music/media_providers/: local_fs.py  tidal.py
src/coreplugin/src/weckpi/plugin/coreplugin/: __init__.py
src/coreplugin/src/weckpi/plugin/coreplugin/music/: __init__.py
src/coreplugin/src/weckpi/plugin/coreplugin/music/media_players/: mpv.py
src/coreplugin/src/weckpi/plugin/coreplugin/music/media_providers/: local_fs.py  tidal.py
src/coreplugin/tests/music/: mpv_local_fs.e2e.py  mpv_tidal.e2e.py
src/web/: .eslintrc.cjs  .prettierignore  .prettierrc  package.json  postcss.config.cjs  svelte.config.js  tailwind.config.cjs
src/web/.yarn/releases/: yarn-3.6.0.cjs
src/web/src/: app.d.ts  app.html  app.postcss
src/web/src/lib/BackendConnection/: ParameterCommunication.ts  ParameterStore.ts  WeckPiCoreConnection.ts
src/web/src/lib/app-state/: app-state.ts  backend-connection.ts  music-store.ts
src/web/src/routes/: +layout.svelte  +layout.ts  +page.svelte  MusicControl.svelte  MusicQueue.svelte
weckpi-base/: weckpi.py  weckpi.service  weckpictl.sh
weckpi-base/bUtils/: day_time.py  display.py
weckpi-base/utils/: gpio.py  vlcplayer.py
weckpi-core/src/music/: music_utils.py  tidal.py
weckpi-core/src/music/metadata/: __init__.py  now_playing.py  playlist_item.py
weckpi-core/src/music/player/: __init__.py  base_player.py  internet_radio.py  single_media_player.py  vlc_player.py
weckpi-core/src/music/players/: __init__.py  internet_radio.py  playlist_player.py  random_playlist_player.py  single_media_player.py
weckpi-core/src/music/tidal/: __init__.py  search_result.py  tidal_session.py
weckpi-core/src/utils/: logging.py  music.py
weckpi-core/test_e2e/music/: lautfm_synthpop.py  tidal.credential.yaml  tidal_userpl_random.py  tidal_vnv.py
weckpi-core/tests/: tidal.py  tidal.test.py
weckpi-web/: package.json
weckpi-web/public/: index.html  manifest.json
weckpi-web/public/scripts/: load.php  save.php
weckpi-web/src/: bun.lockb  index.css  index.js  package.json
weckpi-web/src/components/: MenuEntry.tsx  TimeView.tsx
weckpi-web/src/components/InfoScreen/: Header.tsx  InfoView.tsx  MusicBar.tsx  TimeView.tsx
weckpi-web/src/components/Settings/: Header.tsx
weckpi-web/src/pages/: _app.tsx  index.tsx
weckpi-web/src/pages/settings/: alarm_times.tsx  index.tsx
weckpi-web/src/styles/: Header.module.css  Header.module.scss  Home.module.css  Page.module.scss  TimeView.module.css  globals.scss  variables.scss
weckpi-web/src/styles/InfoScreen/: InfoView.module.scss  MusicBar.module.css  MusicBar.module.scss  TimeView.module.css
weckpi-web/src/styles/Settings/: Redirect.module.scss
weckpi-web/src/types/: InfoViewProps.ts  MenuEntryProps.ts  TimeViewProps.ts
(+20 files in other folders)
