[tool.poetry]
name = "weckpi-core"
version = "0.0.1-alpha1"
description = "The core software of the WeckPi project"
authors = ["Bennet Ranft <bennet@bennetr.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "weckpi"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
